# tfci

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  lib_test.py  lib_tfci.py  main.py  mcp_test.py  mcp_tfci.py  pyproject.toml  requirements.txt  tfci.py
.github/workflows/: deploy-mcp.yml  deploy.yml  publish.yml  test-mcp.yml  test.yml
config/: config.py  mcp_config.yaml
core/: predictor.py
data/: db.py
docs/: STRUCTURE.md
examples/: __init__.py  test_mcp_client.py
mcp/: __init__.py  client.py  mcp_server.py
model/: model.py
scripts/: __init__.py  deploy.sh
servers/: __init__.py  http_mcp_server.py  run_mcp_server.py
tfci/: __init__.py
tfci_mcp/: __init__.py  client.py  pyproject.toml  server.py  test_mcp.py
